--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <source src="http://tvconline.tvceara.ce.gov.br:7000/stream" type="audio/mpeg">
             Seu navegador não suporta o elemento de áudio.
         </audio>
-
+<iframe src="http://tvconline.tvceara.ce.gov.br:7000/stream" width="100%" height="200" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       
     </div>
 </body>
