--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Sintonize e aproveite nossa programação!</p>
 
         <audio controls autoplay>
-            <source src="http://tvconline.tvceara.ce.gov.br:7000/stream" type="audio/mpeg">
+            <source src="" type="audio/mpeg">
         </audio>
       
     </div>
